CMAKE_MINIMUM_REQUIRED(VERSION 3.11)
PROJECT(LibDuDuConvertTest)

SET(DUDU_CONVERT_ROOT   ${CMAKE_CURRENT_SOURCE_DIR}/..)

INCLUDE_DIRECTORIES(${DUDU_CONVERT_ROOT}/include)

SET(DUDU_CONVERT_LIBRARY_DIR ${DUDU_CONVERT_ROOT}/lib)
SET(DUDU_CONVERT_LIBRARIES   ${DUDU_CONVERT_LIBRARY_DIR}/libduduconvert.so)
LINK_DIRECTORIES(
	${DUDU_CONVERT_LIBRARY_DIR}
)

ADD_EXECUTABLE(LibDuDuConvertTest ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
TARGET_LINK_LIBRARIES(LibDuDuConvertTest ${DUDU_CONVERT_LIBRARIES})